# Vak

./: .gitignore  AGENTS.md  DEPENDENCIES.md  README.md  pyproject.toml  requirements.txt
config/: llm_config_example.yaml
docs/: VIRTUAL_ENV_USAGE.md  functional.md  non_functional.md  technical.md
docs/LLM Factory/: functional.md  non_functional.md  technical.md
src/nikhil/vak/domain/llm_factory/dependency/: llm_container.py
src/nikhil/vak/domain/llm_factory/domain/: llm_type.py
src/nikhil/vak/domain/llm_factory/example/: llm_example.py
src/nikhil/vak/domain/llm_factory/example/config/: llm_config.yaml
src/nikhil/vak/domain/llm_factory/service/: llm_builder.py
src/nikhil/vak/domain/llm_factory/settings/: llm_settings.py
src/nikhil/vak/domain/llm_factory/utils/: llm_utils.py
src/nikhil/vak/llm_factory/dependency/: llm_container.py
src/nikhil/vak/llm_factory/domain/: models.py
src/nikhil/vak/llm_factory/example/: llm_example.py
src/nikhil/vak/llm_factory/example/config/: llm_config.yaml
src/nikhil/vak/llm_factory/service/: llm_builder.py
src/nikhil/vak/llm_factory/settings/: llm_settings.py
src/nikhil/vak/utils/: json_utils.py  utf8_utils.py  yaml_utils.py
