[project]
name = "Vak"
version = "1.0.0"
description = "Common config and crew AI helpers"
dependencies = [
    "PyYAML>=6.0.2",
    "crewai>=0.201.1",
    "crewai-tools>=0.75.0",
    "duckduckgo-search>=8.0.2",
    "pymongo>=4.11.3",
    "arxiv>=2.2.0",
    "pydantic>=2.11.9",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.27.1",
    "scikit-learn>=1.6.1",
    "gensim>=4.3.3",
    "bertopic>=0.17.0",
    "networkx>=3.4.2",
    "nltk>=3.9.1",
    "markdown>=3.8",
    "beautifulsoup4>=4.13.4",
    "lxml>=5.4.0",
    "dependency-injector>=4.48.1",
    "chardet>=5.2.0",
    "pandas>=2.3.2",
    "openpyxl>=3.1.5",
    "docling>=2.55.0",
    "dvc-s3>=3.0.1",
    "boto3>=1.34.0",
    "sse-starlette>=3.0.3",
    "fastapi>=0.121.3"
]

[project.optional-dependencies]
mlops = [
    "mlflow>=2.10.0",
    "prefect>=2.14.0",
    "evidently>=0.4.0",
    "boto3>=1.34.0",
]
audit = [
    "google-generativeai>=0.3.2",
]
dev = [
    "pre-commit>=3.6.0",
    "mypy>=1.8.0",
    "black>=24.2.0",
    "flake8>=7.0.0",
    "isort>=5.13.2",
    "pytest>=7.4.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]