[project]
name = "Vak"
version = "1.0.1"
description = "Common config and crew AI helpers"
dependencies = [
    "PyYAML>=6.0.2",
    "crewai>=0.201.1",
    "crewai-tools>=0.75.0"
]

[project.optional-dependencies]
mlops = [
    "mlflow>=2.10.0",
    "prefect>=2.14.0",
    "evidently>=0.4.0",
    "boto3>=1.34.0",
]
audit = [
    "google-generativeai>=0.3.2",
]
dev = [
    "pre-commit>=3.6.0",
    "mypy>=1.8.0",
    "black>=24.2.0",
    "flake8>=7.0.0",
    "isort>=5.13.2",
    "pytest>=7.4.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]